# VoxEngine

./: CMakeLists.txt
Core/: CMakeLists.txt
Core/include/VoxCore/: Assert.h  Define.h  Logger.h  Severity.h  SingletonBase.h  Time.h
Core/include/VoxCore/containers/: ArrayView.h  Buffer.h  Containers.h  Graph.h
Core/include/VoxCore/math/: Extent.h  Extent3D.h
Core/src/containers/: Buffer.cpp
Editor/: CMakeLists.txt
Editor/src/: MainApp.h
Editor/src/exec/: Imgtest.h  main.cpp  precompileMain.cpp
Editor/src/gui/: Gui.cpp  Gui.h  GuiRenderPass.cpp  GuiRenderPass.h
Engine/: CMakeLists.txt
Engine/include/VoxEngine/: Engine.h
Engine/include/VoxEngine/platform/: LinuxPlatform.h  Platform.h
Engine/include/VoxEngine/render/: AttachmentDesc.h  Backend.h  CommandBuffer.h  CommandPool.h  Device.h  Enums.h  FpsCounter.h  IndexType.inl  RenderBackend.h  RenderContext.h  RenderCore.h  RenderPassType.h  RenderResource.h  RenderTarget.h  Renderer.h  RendererFactory.h  Texture.h  Types.h  WindowRenderTarget.h
Engine/include/VoxEngine/render/buffers/: IndexBuffer.h  RenderBuffer.h  VertexBuffer.h
Engine/include/VoxEngine/render/graph/: GraphTexture.h  RenderGraph.h  TextureHandle.h
Engine/include/VoxEngine/render/passes/: GeometryPass.h  PassTransition.h  RenderPass.h
Engine/include/VoxEngine/render/shaders/: CompiledShader.h  ShaderCompiler.h  ShaderRepository.h  ShaderSrc.h  ShaderType.h
Engine/include/VoxEngine/render/state/: BlendState.h  BlendStateShard.h  MsaaState.h  PipelineLayout.h  PipelineState.h  PipelineStateDesc.h  RasterizerState.h  RenderingState.h  Shader.h  ShaderState.h  UniformLayout.h  VertexLayout.h
Engine/include/VoxEngine/render/vulkan/: CommandBuffer.h  CommandPool.h  Debug.h  Fence.h  FrameSync.h  GraphicsPipeline.h  LogicalDevice.h  PhysicalDevice.h  Queue.h  QueueFamilyRepository.h  QueueType.h  RenderMesh.h  RenderPass.h  Semaphore.h  StagingBuffer.h  Surface.h  SwapChain.h  Vertex.h  VulkanBackend.h  VulkanCommandBuffer.h  VulkanCommandPool.h  VulkanDevice.h  VulkanEnums.h  VulkanObject.h  VulkanRenderTarget.h  VulkanRenderer.h  VulkanState.h  VulkanTexture.h  VulkanTextureRenderTarget.h  VulkanTypes.h  VulkanUtil.h  VulkanWindowRenderTarget.h
Engine/include/VoxEngine/render/vulkan/barrier/: Barrier.h  ImageBarrier.cpp  ImageBarrier.h
Engine/include/VoxEngine/render/vulkan/buffers/: IndexBuffer.h  RenderBuffer.h  VertexBuffer.h
Engine/include/VoxEngine/render/vulkan/passes/: GeometryPass.h  PresentPass.h  RenderPass.h
Engine/include/VoxEngine/render/vulkan/pipeline/: BlendState.h  GraphicsPipeline.h
Engine/include/VoxEngine/render/windowing/: Window.h
Engine/include/VoxEngine/resources/: ResourcesManager.h
Engine/include/VoxEngine/resources/assets/: Asset.h  AssetLoader.h  AssetMetadata.h  AssetType.h  FbxLoader.h  MeshAsset.h  ModelAsset.h  RegularFile.h  RegularFileLoader.h  ShaderAsset.h  ShaderLoader.h
Engine/include/VoxEngine/resources/serialization/: BlobView.h  Serializable.h
Engine/src/core/: Engine.cpp  Time.cpp
Engine/src/platform/: LinuxPlatform.cpp
Engine/src/render/: Backend.cpp  CommandBuffer.cpp  Device.cpp  FpsCounter.cpp  RenderCore.cpp  RenderTarget.cpp  Renderer.cpp  RendererFactory.cpp
Engine/src/render/graph/: RenderGraph.cpp  TextureHandle.cpp
Engine/src/render/passes/: GeometryPass.cpp  RenderPass.cpp
Engine/src/render/shaders/: CompiledShader.cpp  ShaderCompiler.cpp  ShaderRepository.cpp
Engine/src/render/state/: PipelineStateDesc.cpp  RasterizerState.cpp  ShaderState.cpp
Engine/src/render/vulkan/: CommandBuffer.cpp  CommandPool.cpp  Fence.cpp  FrameSync.cpp  GraphicsPipeline.cpp  LogicalDevice.cpp  PhysicalDevice.cpp  Queue.cpp  QueueFamilyRepository.cpp  RenderBuffer.cpp  RenderMesh.cpp  RenderPass.cpp  Semaphore.cpp  StagingBuffer.cpp  Surface.cpp  SwapChain.cpp  VulkanBackend.cpp  VulkanCommandBuffer.cpp  VulkanRenderTarget.cpp  VulkanRenderer.cpp  VulkanState.cpp  VulkanTexture.cpp  VulkanTextureRenderTarget.cpp  VulkanWindowRenderTarget.cpp
Engine/src/render/vulkan/buffers/: IndexBuffer.cpp  VertexBuffer.cpp
Engine/src/render/vulkan/passes/: GeometryPass.cpp  PresentPass.cpp  RenderPass.cpp
Engine/src/render/vulkan/pipeline/: BlendState.cpp  GraphicsPipeline.cpp
Engine/src/render/window/: Window.cpp
Engine/src/resources/: ResourcesManager.cpp
Engine/src/resources/assets/: Asset.cpp  AssetLoader.cpp  AssetMetadata.cpp  FbxLoader.cpp  MeshAsset.cpp  ModelAsset.cpp  RegularFile.cpp  RegularFileLoader.cpp  ShaderAsset.cpp  ShaderLoader.cpp
Engine/src/resources/serialization/: BlowView.cpp  Serializable.cpp
