cmake_minimum_required(VERSION 3.20)
project(VoxEngine)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O0")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} -O0")

add_subdirectory(ThirdParty)
add_subdirectory(Core)
add_subdirectory(Engine)
add_subdirectory(Editor)

add_library(project_options INTERFACE)
if(CMAKE_BUILD_TYPE STREQUAL "Debug")
    target_link_options(project_options INTERFACE -g -rdynamic -fsanitize=address)
    target_compile_options(project_options INTERFACE -fsanitize=address)
    target_compile_definitions(project_options INTERFACE VOX_DEBUG)
else()
    target_link_options(project_options INTERFACE -flto)
    target_compile_options(project_options INTERFACE -O3 -flto)
    target_compile_definitions(project_options INTERFACE VOX_RELEASE)
endif()